fix: issue#19  Horizontal scroll bar effect
There will show horizontal scroll bar when success or error message is longer than label.

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@
     position: absolute;
     z-index: -100;
     top: 50%;
-    left: 0;
+    right: 0;
     padding: 0.5em 0.65em;
     font-size: 0.825em;
     opacity: 0;
